# sml

./: .appveyor.yml  .clang-tidy  .gitignore  .mkdocs.yml  .travis.yml  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CMakelists.txt  Makefile  README.md  Toolchain-Linux-gcc-5.cmake  Toolchain-Linux-gcc-7.cmake  Toolchain-Windows-10-VS14-2015.cmake  Toolchain-Windows-10-VS15-2017.cmake  Toolchain-Windows-10-VS2015.cmake  benchmarks.html  conanfile.py  examples.html  faq.html  index.html  mkdocs.yml  msm.cpp  msm.hpp  overview.html  search.html  sitemap.xml  smlConfig.cmake.in  tutorial.html  uml_vs_sml.html  user_guide.html
benchmark/: CMakeLists.txt  CMakelists.txt  Makefile  a.out  benchmark.hpp
benchmark/complex/: CMakeLists.txt  euml.cpp  euml2.cpp  msm-lite.cpp  sc.cpp  sml.cpp  sml.lite.cpp  switch.cpp  variant.cpp
benchmark/composite/: CMakeLists.txt  euml.cpp  msm-lite.cpp  sc.cpp  sml.cpp
benchmark/connection/: Makefile  boost_msm.cpp  boost_sml.cpp  boost_statechart.cpp  coroutine_goto.cpp  coroutine_loop.cpp  coroutine_variant.cpp  naive_if_else.cpp  naive_state_pattern.cpp  naive_state_pattern_v2.cpp  naive_switch.cpp  state_pattern_v1.cpp  state_pattern_v2.cpp  stl_coroutine_fun_variant.cpp  stl_coroutine_goto.cpp  stl_coroutine_loop.cpp  stl_variant.cpp  stl_variant_v2.cpp
benchmark/header/: CMakeLists.txt  euml.cpp  euml2.cpp  msm-lite.cpp  sc.cpp  sml.cpp
benchmark/simple/: CMakeLists.txt  euml.cpp  msm-lite.cpp  sc.cpp  sml.cpp
benchmark/state_machine/: gen.py  plot.gp  run.sh
boost/: CHANGELOG.html  CMakeLists.txt  benchmarks.html  examples.html  faq.html  index.html  mkdocs.yml  overview.html  sitemap.xml  tutorial.html  uml_vs_sml.html  user_guide.html
boost/CHANGELOG/: index.html
boost/TODO/: index.html
boost/benchmarks/: index.html
boost/cppcon-2018/: index.html
boost/cppcon-2018/reveal.js/: README.html
boost/cppnow-2016/: CONTRIBUTING.html  README.html  index.html
boost/cppnow-2016/example/: at.cpp  hana_at.cpp  hana_unique.cpp  mpl_at.cpp  mpl_unique.cpp  unique.cpp
boost/cppnow-2016/uml/: sm_example.uml
boost/cppnow-2017/: README.html  index.html
boost/cppnow-2019/: index.html
boost/cppnow-2019/reveal.js/: CONTRIBUTING.html  README.html
boost/denver-cpp-2020/: index.html
boost/embo-2017/: index.html
boost/embo-2017/example/: connection_v1.cpp  connection_v4.cpp
boost/embo-2017/uml/: connection.uml
boost/embo-2018/: CONTRIBUTING.html  README.html  index.html
boost/embo-2018/example/: dependencies_per_ga.cpp  dependencies_per_state_machine.cpp  dispatch_switch_stm.cpp  error_handling.cpp  transitions.cpp
boost/embo-2018/test/: simple.html
boost/embo-2018/uml/: benchmark.uml  system.uml  system_composite.uml  (+1 more)
boost/examples/: index.html
boost/faq/: index.html
boost/js/: cpp.js  gitter.js
boost/meeting-embedded-2020/: index.html
boost/mkdocs/: search_index.json
boost/overview/: index.html
boost/search/: search_index.json
boost/tutorial/: index.html
boost/uml/: external_transition.uml  tcp_release.uml
boost/uml_vs_sml/: index.html
boost/user_guide/: index.html
doc/: CHANGELOG.md  CMakeLists.txt  TODO.md  api.md  benchmarks.md  examples.md  index.md  mkdocs.yml  overview.md  reference.md  todo.md  tutorial.md  uml_vs_sml.md  user_guide.md
doc/boost/: base.html
doc/cppcon-2018/: index.html
doc/cppcon-2021/: index.html
doc/cppnow-2016/: CMakeLists.txt  index.html
doc/cppnow-2017/: index.html
doc/cppnow-2019/: index.html
doc/denver-cpp-2020/: index.html
doc/embo-2017/: CMakeLists.txt  index.html
doc/embo-2018/: index.html
doc/example/: action_guards.md  composite.md  di.md  dispatcher.md  euml_emulation.md  events.md  hello_world.md  orthogonal_regions.md  states.md  transitions.md
doc/js/: cpp.js  gitter.js  run_this_code.js
doc/meeting-embedded-2020/: index.html
doc/readthedocs/: base.html  footer.html
doc/scripts/: update_readme_toc.py
doc/uml/: anonymous_transition.uml  arduino.uml  initial_state.uml  tcp_release.uml
example/: CMakeLists.txt  CMakelists.txt  action_guards.cpp  actions_guards.cpp  arduino.cpp  composite.cpp  data.cpp  defer_and_process.cpp  dependencies.cpp  dependency_injection.cpp  di.cpp  dispatch_policy.cpp  dispatch_table.cpp  error_handling.cpp  euml_emulation.cpp  eval.cpp  events.cpp  flags.cpp  hello_world.cpp  history.cpp  in_place.cpp  logging.cpp  msm.cpp  nested.cpp  orthogonal_regions.cpp  plant_uml.cpp  sdl2.cpp  states.cpp  testing.cpp  transitions.cpp  uml_notation.cpp  visitor.cpp
example/action_guards/: index.html
example/composite/: index.html
example/di/: index.html
example/dispatcher/: index.html
example/errors/: not_callable.cpp  not_configurable.cpp  not_dispatchable.cpp  not_transitional.cpp
example/euml_emulation/: index.html
example/events/: index.html
example/hello_world/: index.html
example/orthogonal_regions/: index.html
example/reference/: make_transition_table.cpp
example/states/: index.html
example/transitions/: index.html
sml/: sml  (+1 more)
test/: CMakeLists.txt  ft.cpp  ft_except.cpp  ft_logging.cpp  ft_sizeof.cpp  ft_thread.cpp  ft_unit1.cpp  ft_units.cpp  pt.cpp  test.hpp  ut.cpp
test/common/: test.hpp
test/ft/: CMakeLists.txt  actions_defer.cpp  actions_process.cpp  actions_process_n_defer.cpp  composite.cpp  constexpr.cpp  deep_sm.cpp  dependencies.cpp  di.cpp  dispatch_table.cpp  dont_instantiate_statemachine_class.cpp  events.cpp  exceptions.cpp  ft_actions_defer.cpp  ft_actions_process.cpp  ft_composite.cpp  ft_defer.cpp  ft_dependencies.cpp  ft_di.cpp  ft_dispatch_table.cpp  ft_events.cpp  ft_exceptions.cpp  ft_history.cpp  ft_inject.cpp  ft_orthogonal_regions.cpp  ft_policies_logging.cpp  ft_policies_thread_safe.cpp  ft_queue.cpp  ft_sizeof.cpp  ft_state_machine.cpp  ft_states.cpp  ft_testing.cpp  ft_transition_table.cpp  ft_transitions.cpp  ft_unexpected_events.cpp  ft_unit1.cpp  ft_units.cpp  fwd.cpp  fwd.hpp  guards.cpp  (+19 more)
test/pt/: benchmark.hpp
test/unit/: CMakeLists.txt  unit1.cpp  unit2.cpp  units.cpp
test/ut/: CMakeLists.txt  concepts.cpp  type_traits.cpp  utility.cpp
(+253 files in other folders)
