#
# Copyright (c) 2016-2019 Jean Davy
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
project(doc LANGUAGES CXX)

add_subdirectory(cppnow-2016)
add_subdirectory(cppnow-2017)
add_subdirectory(embo-2017)
