#
# Copyright (c) 2016-2020 Jean Davy
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
add_example(header_euml benchmark_header_euml euml.cpp)
add_executable(header_euml2 euml2.cpp)
add_example(header_sc benchmark_header_sc sc.cpp)
add_example(header_sml benchmark_header_sml sml.cpp)
